--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,5 +5,6 @@ spring.datasource.url=jdbc:mysql://10.0.0.250/doctors?useSSL=false&serverTimezon
 spring.datasource.username=root
 spring.datasource.password=Acmilan1
 spring.jpa.show-sql= true
+server.port=8080
 
 
