--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ logging.level.org.springframework=ERROR
 
 spring.datasource.url=jdbc:mysql://10.0.0.250/doctors?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Acmilan1
+spring.datasource.password=*German1995
 spring.jpa.show-sql= true
 server.port=8080
 
